fix: initial render must be visible to register with muuri

--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,6 @@
   border: 0;
 }
 
-/* Hide widget container when component is disabled */
-.widget-item.in-sidebar:has(.component-disabled) {
-  display: none;
-}
 
 .setting-item-does {
   /* Base Style: All tags share these properties */
